Start fixing tables on small screen.

--- a/src/styles/explorer.css
+++ b/src/styles/explorer.css
@@ -162,7 +162,7 @@
 */
 
 html, body {
-    background: var(--h-theme-page-background-color);
+    background: var(--background-primary);
     font-family: var(--font-family-proportional), sans-serif;
     font-weight: 400;
     font-style: normal;
