--- a/src/styles/oruga-customization.css
+++ b/src/styles/oruga-customization.css
@@ -114,18 +114,22 @@ div.o-table__pagination {
 
 @media (max-width: 1079px) {
     .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:first-child {
-        border-top: #979797 1px solid;
-        border-bottom: #4A4A4A 1px solid;
+        border-top: 1px solid var(--border-secondary);
+        border-bottom: 0;
+        background-color: var(--background-tertiary);
     }
 
-    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:not(:first-child):not(:last-child) {
-        border-top: 0;
-        border-bottom: #4A4A4A 1px solid;
-    }
-
+    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:not(:first-child):not(:last-child),
     .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:last-child {
         border-top: 0;
         border-bottom: 0;
+        background-color: var(--background-tertiary);
+    }
+
+    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:first-child:hover,
+    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:not(:first-child):not(:last-child):hover,
+    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:last-child:hover {
+        background-color: var(--background-primary);
     }
 }
 
